Fixed bug #71127 (Define in auto_prepend_file is overwrite)